# TTT

./: .gitattributes  .gitignore  ML6_training_loop_direct_finetuning.py  cbg_diagnostic.py  cbg_diagnostic2.py  cbg_sensitivity.py  classifier.py  compute_jac_cos.py  direct_finetune.py  dpo_finetune.py  eval.py  grpo_finetune.py  lora.py  pyproject.toml  run_online_ttt.py  run_ttt_eval.py  test_gradient_flow.py
README.assets/: traj.gif.REMOVED.git-id  traj.mp4.REMOVED.git-id
cbg/: cbg_diagnostic.py  cbg_diagnostic2.py  cbg_sensitivity.py  compute_jac_cos.py
cores/: mcmc.py
eval_images/: make_combined.py
exps/cbg/inverse-scatter-linear_cbg_forward_80pct_lr0.0001_ch64_unet_surrogate_nosnr_norm_p50_jac1.0_gen128/: classifier_best.pt
exps/cbg_nonorm/inverse-scatter-linear_cbg_forward_80pct_lr0.0001_ch64_unet_surrogate_nosnr_nonorm_p50_gen128/: classifier_best.pt
exps/cbg_sde/inverse-scatter-linear_cbg_forward_80pct_lr0.0001_ch64_unet_surrogate_nosnr_norm_p50_jac1.0_gen128/: classifier_best.pt
finetuning/: ML6_training_loop_direct_finetuning.py  direct_finetune.py  dpo_finetune.py  grpo_finetune.py  run_online_ttt.py  run_ttt_eval.py
inversebench/: .gitignore  debug_cbg_guidance.py  debug_fwd.py  eval_cbg.py  eval_daps.py  grad_diagnostic.py  grad_on_policy.py  guidance_sweep.py  pyproject.toml  quick_eval.py  run_direct.sh  run_large.sh  run_target_mode_sweep.sh  run_tune_guidance.sh  run_tweedie.sh  save_comparison_images.py  setup_and_run_cbg_ml7.sh  setup_and_run_ml6.sh  sweep_hybrid.py  train.py  train_cbg.py  train_ttt.py  tune_guidance.py  visualize_cbg.py
inversebench/algo/: dps.py  lora.py  ttt_cbg.py  ttt_lora.py
inversebench/configs/algorithm/: ddsmc.yaml  dps.yaml  ttt_lora.yaml
inversebench/configs/cbg/: default.yaml
inversebench/configs/pretrain/: fwi.yaml
inversebench/configs/problem/: fwi-cbg.yaml
inversebench/configs/ttt/: default.yaml
inversebench/inverse_problems/: acoustic.py
inversebench/models/: modules.py  precond.py  unets.py
inversebench/training/: loss.py
