[project]
name = "inversebench"
version = "0.1.0"
description = "InverseBench env"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "dask>=2025.10.0",
    "devito==4.8.12",
    "distributed>=2025.10.0",
    "ehtim>=1.2.10",
    "fastmri>=0.3.0",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "lmdb>=1.7.5",
    "numpy>=2.2.6",
    "nvitop>=1.5.3",
    "piq>=0.8.0",
    "sigpy>=0.1.27",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
